...
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:scaleType="fitCenter"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
                android:drawableLeft="@drawable/email_password"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="Sign in here, if registered already"
                android:textColor="#fff"
                android:textSize="12dp"
                android:textStyle="bold"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_editor_absoluteX="78dp"
...
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="15"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <EditText
        android:id="@+id/editTextPassword"
...
