...
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeUser"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="#80020000"
        android:onClick="onClick"
        android:text="LogOut"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/professionPageButton"
        app:layout_constraintLeft_toLeftOf="parent"
...
        android:background="#8031dd0b"
        android:onClick="onClick"
        android:text="Store"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHomeMessage"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:background="#801b82e2"
        android:gravity="center"
        android:onClick="onClick"
        android:text="Search"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRankings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
