...
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonHomeScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="HOME"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
        app:layout_constraintStart_toStartOf="@+id/buttonLogOut"
        app:layout_constraintTop_toBottomOf="@+id/listFinal" />

    <Button
        android:id="@+id/buttonLogOut"
...
